--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -10,7 +10,6 @@
 .form_row {
     display: flex;
     width: 100%;
-    max-width: 900px;
 }
 
 .form_input {
